objects/Contact.object
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Age__c</fullName>
        <formula>YEAR(TODAY())   -   YEAR( DOB__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <description>case study</description>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tamil Nadu</fullName>
                </value>
                <value>
                    <fullName>Kerala</fullName>
                </value>
                <value>
                    <fullName>Karnataka</fullName>
                </value>
                <value>
                    <fullName>Andhra Pradesh</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <description>case study</description>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>State__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chennai</fullName>
                </value>
                <value>
                    <fullName>Madurai</fullName>
                </value>
                <value>
                    <fullName>Salem</fullName>
                </value>
                <value>
                    <fullName>Dharmapuri</fullName>
                </value>
                <value>
                    <fullName>Coimbatore</fullName>
                </value>
                <value>
                    <fullName>Tuticorin</fullName>
                </value>
                <value>
                    <fullName>Alappuzha</fullName>
                </value>
                <value>
                    <fullName>Ernakulam</fullName>
                </value>
                <value>
                    <fullName>Kannur</fullName>
                </value>
                <value>
                    <fullName>Idukki</fullName>
                </value>
                <value>
                    <fullName>Bagalkot</fullName>
                </value>
                <value>
                    <fullName>Bengaluru Urban</fullName>
                </value>
                <value>
                    <fullName>Bengaluru Rural</fullName>
                </value>
                <value>
                    <fullName>Belagavi</fullName>
                </value>
                <value>
                    <fullName>Srikakulam</fullName>
                </value>
                <value>
                    <fullName>Vizianagaram</fullName>
                </value>
                <value>
                    <fullName>Visakhapatnam</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>FirstName  &amp; &quot; &quot;  &amp;  LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Code__c</fullName>
        <label>Post Code</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>High_priority__c</fullName>
        <formula>ISPICKVAL(Account.Priority_field__c, &quot;High&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>High priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Relationship__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Relationship</label>
        <type>Checkbox</type>
    </fields>
    <validationRules>
        <fullName>phone_no_rule_consumer</fullName>
        <active>true</active>
        <description>case study</description>
        <errorConditionFormula>LEN(Phone)  &lt;&gt; 10</errorConditionFormula>
        <errorMessage>Please Enter Valid Number</errorMessage>
    </validationRules>
</CustomObject>